modules/vault_ui_ingress/templates/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: vault-ui
  namespace: ${namespace}
  annotations:
    cert-manager.io/cluster-issuer: ${issuer_name}
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  rules:
    - host: ${vault_subdomain_name}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: ${vault_backend_service_name}
              servicePort: ${vault_backend_service_port}
